--- a/my-app/templates/base.html
+++ b/my-app/templates/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{% block title %}{% endblock %}</title>
-  <style type="text/css" src="{{ url_for('static', filename='css/index.css') }}"></style>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
   {% endblock %}
 </head>
 <body>
